--- a/src/main/resources/i18n/exception_en_US.properties
+++ b/src/main/resources/i18n/exception_en_US.properties
@@ -2,3 +2,4 @@ auth.authentication.failed=Authentication Failed
 auth.access.denied=Access Denied
 auth.username.failed=user or password is incorrect
 auth.captcha.expired=captcha expired
+auth.captcha.error=captcha error
