feat: 1.增加角色相关接口，以及角色菜单绑定接口，2.增加菜单相关接口，3.增加个人信息接口，个人菜单接口

--- a/src/main/resources/i18n/exception_en_CN.properties
+++ b/src/main/resources/i18n/exception_en_CN.properties
@@ -3,3 +3,6 @@ auth.access.denied=Access Denied
 auth.username.failed=user or password is incorrect
 auth.captcha.expired=captcha expired
 auth.captcha.error=captcha error
+menu.delete.failed=The current menu also has sublevels and cannot be deleted
+user.not.found=user not found
+user.repeat=user repeat
