--- a/src/main/resources/i18n/exception_en_US.properties
+++ b/src/main/resources/i18n/exception_en_US.properties
@@ -3,3 +3,6 @@ auth.access.denied=Access Denied
 auth.username.failed=user or password is incorrect
 auth.captcha.expired=captcha expired
 auth.captcha.error=captcha error
+menu.delete.failed=The current menu also has sublevels and cannot be deleted
+user.not.found=user not found
+user.repeat=user repeat
