--- a/src/main/resources/i18n/exception_zh_CN.properties
+++ b/src/main/resources/i18n/exception_zh_CN.properties
@@ -8,3 +8,9 @@ auth.username.failed=\u7528\u6237\u6216\u8005\u5bc6\u7801\u9519\u8bef
 auth.captcha.expired=\u9a8c\u8bc1\u7801\u8fc7\u671f
 # ?????
 auth.captcha.error=\u9a8c\u8bc1\u7801\u9519\u8bef
+# ??????
+user.not.found=\u6ca1\u6709\u627e\u5230\u7528\u6237
+# ????
+user.repeat=\u7528\u6237\u91cd\u590d
+# ?????????,????
+menu.delete.failed=\u5f53\u524d\u83dc\u5355\u8fd8\u5b58\u5728\u5b50\u7ea7,\u4e0d\u80fd\u5220\u9664
