--- a/src/main/resources/i18n/exception_zh_CN.properties
+++ b/src/main/resources/i18n/exception_zh_CN.properties
@@ -6,6 +6,7 @@ error.auth.captcha.expired=\u9a8c\u8bc1\u7801\u8fc7\u671f
 error.auth.captcha.error=\u9a8c\u8bc1\u7801\u9519\u8bef
 error.user.not.found=\u6ca1\u6709\u627e\u5230\u7528\u6237
 error.user.repeat=\u7528\u6237\u91cd\u590d
+error.user.rawpassword.mistake=\u7528\u6237\u539F\u5BC6\u7801\u4E0D\u4E00\u81F4
 error.menu.delete.failed=\u5f53\u524d\u83dc\u5355\u8fd8\u5b58\u5728\u5b50\u7ea7,\u4e0d\u80fd\u5220\u9664
 error.attachment.upload.executor.notfound=\u672A\u627E\u5230\u4E91\u5B58\u50A8\u4F9B\u5E94\u5546
 error.attachment.upload.error=\u4E0A\u4F20\u5931\u8D25
