--- a/src/main/resources/i18n/exception_en_US.properties
+++ b/src/main/resources/i18n/exception_en_US.properties
@@ -7,6 +7,7 @@ error.auth.captcha.error=Captcha error
 error.menu.delete.failed=The current menu also has sublevels and cannot be deleted
 error.user.not.found=User not found
 error.user.repeat=User repeat
+error.user.rawpassword.mistake=User raw password mistake
 error.attachment.upload.error=Upload error
 error.attachment.upload.executor.notfound=The cloud storage provider was not found
 error.attachment.upload.exceed.size=File exceed max size
