--- a/src/main/resources/i18n/dev_en_US.properties
+++ b/src/main/resources/i18n/dev_en_US.properties
@@ -1,1 +1,5 @@
 dev.bo.error=Failed to obtain BO data
+dev.bo.not.found=Not found BO
+dev.bo.none.materialize=bo %s none materialized
+dev.bo.none.tables=bo object %s none data table
+dev.page.not.found=page view not found
