--- a/src/main/resources/i18n/dev_zh_CN.properties
+++ b/src/main/resources/i18n/dev_zh_CN.properties
@@ -1,2 +1,5 @@
 dev.bo.error=\u83b7\u53d6\u0042\u004f\u6570\u636e\u5931\u8d25
-dev.bo.engine.error=?????????
+dev.bo.not.found=\u6ca1\u6709\u627e\u5230\u0042\u004f\u6570\u636e
+dev.bo.none.materialize=bo%25s\u6ca1\u6709\u8fdb\u884c\u7269\u5316
+dev.bo.none.tables=bo\u5bf9\u8c61%25s\u6ca1\u6709\u6570\u636e\u8868
+dev.page.not.found=\u9875\u9762\u89c6\u56fe\u672a\u627e\u5230
