--- a/src/main/resources/i18n/exception_zh_CN.properties
+++ b/src/main/resources/i18n/exception_zh_CN.properties
@@ -12,3 +12,5 @@ error.attachment.upload.executor.notfound=\u672A\u627E\u5230\u4E91\u5B58\u50A8\u
 error.attachment.upload.error=\u4E0A\u4F20\u5931\u8D25
 error.attachment.upload.exceed.size=\u6587\u4EF6\u8D85\u51FA\u4E0A\u4F20\u5927\u5C0F
 error.attachment.download.error=\u4E0B\u8F7D\u5931\u8D25
+error.oauth2.login.failed=oauth2 \u767b\u5f55\u5931\u8d25
+error.oauth2.login.token=\u9519\u8bef\u7684 oauth2 token
