--- a/src/main/resources/i18n/exception_en_US.properties
+++ b/src/main/resources/i18n/exception_en_US.properties
@@ -12,3 +12,5 @@ error.attachment.upload.error=Upload error
 error.attachment.upload.executor.notfound=The cloud storage provider was not found
 error.attachment.upload.exceed.size=File exceed max size
 error.attachment.download.error=Download error
+error.oauth2.login.failed=oauth2 login failure
+error.oauth2.login.token=mistake oauth2 token
