--- a/src/main/resources/i18n/exception_en_US.properties
+++ b/src/main/resources/i18n/exception_en_US.properties
@@ -1,9 +1,9 @@
-error.system.operate.error=Operate error
+error.system.operate.error=Operate Error
 error.auth.authentication.failed=Authentication Failed
 error.auth.access.denied=Access Denied
 error.auth.username.failed=User or password is incorrect
-error.auth.captcha.expired=Captcha expired
-error.auth.captcha.error=Captcha error
+error.auth.captcha.expired=Captcha Expired
+error.auth.captcha.error=Captcha Error
 error.menu.delete.failed=The current menu also has sublevels and cannot be deleted
 error.user.not.found=User not found
 error.user.repeat=User repeat
@@ -11,6 +11,6 @@ error.user.rawpassword.mistake=User raw password mistake
 error.attachment.upload.error=Upload error
 error.attachment.upload.executor.notfound=The cloud storage provider was not found
 error.attachment.upload.exceed.size=File exceed max size
-error.attachment.download.error=Download error
-error.oauth2.login.failed=oauth2 login failure
-error.oauth2.login.token=mistake oauth2 token
+error.attachment.download.error=Download Error
+error.oauth2.login.failed=Oauth2 login failure
+error.oauth2.login.token=Mistake oauth2 token
