--- a/src/main/resources/i18n/exception_zh_CN.properties
+++ b/src/main/resources/i18n/exception_zh_CN.properties
@@ -10,6 +10,7 @@ error.user.rawpassword.mistake=\u7528\u6237\u539F\u5BC6\u7801\u4E0D\u4E00\u81F4
 error.menu.delete.failed=\u5f53\u524d\u83dc\u5355\u8fd8\u5b58\u5728\u5b50\u7ea7,\u4e0d\u80fd\u5220\u9664
 error.attachment.upload.executor.notfound=\u672A\u627E\u5230\u4E91\u5B58\u50A8\u4F9B\u5E94\u5546
 error.attachment.upload.error=\u4E0A\u4F20\u5931\u8D25
+error.attachment.upload.filename.empty=\u6587\u4ef6\u540d\u4e3a\u7a7a
 error.attachment.upload.exceed.size=\u6587\u4EF6\u8D85\u51FA\u4E0A\u4F20\u5927\u5C0F
 error.attachment.download.error=\u4E0B\u8F7D\u5931\u8D25
 error.oauth2.login.failed=oauth2 \u767b\u5f55\u5931\u8d25
