--- a/src/main/resources/i18n/exception_zh_CN.properties
+++ b/src/main/resources/i18n/exception_zh_CN.properties
@@ -13,5 +13,6 @@ error.attachment.upload.error=\u4E0A\u4F20\u5931\u8D25
 error.attachment.upload.filename.empty=\u6587\u4ef6\u540d\u4e3a\u7a7a
 error.attachment.upload.exceed.size=\u6587\u4EF6\u8D85\u51FA\u4E0A\u4F20\u5927\u5C0F
 error.attachment.download.error=\u4E0B\u8F7D\u5931\u8D25
+error.attachment.notfound=\u6587\u4ef6\u672a\u627e\u5230
 error.oauth2.login.failed=oauth2 \u767b\u5f55\u5931\u8d25
 error.oauth2.login.token=\u9519\u8bef\u7684 oauth2 token
