--- a/src/main/resources/i18n/exception_en_US.properties
+++ b/src/main/resources/i18n/exception_en_US.properties
@@ -9,9 +9,10 @@ error.user.not.found=User not found
 error.user.repeat=User repeat
 error.user.rawpassword.mistake=User raw password mistake
 error.attachment.upload.error=Upload error
-error.attachment.upload.filename.empty=filename is empty
+error.attachment.upload.filename.empty=Filename is empty
 error.attachment.upload.executor.notfound=The cloud storage provider was not found
 error.attachment.upload.exceed.size=File exceed max size
 error.attachment.download.error=Download Error
+error.attachment.notfound=File not found
 error.oauth2.login.failed=Oauth2 login failure
 error.oauth2.login.token=Mistake oauth2 token
